# tntPlayer

./: .gitignore  LICENSE
crossany/: AppDelegate.cpp  CMakeLists.txt  appdelegate.h  crossany.cpp  curl断点续传.url  libcurl实现断点续传.url  nigx x-sendfile.url  php+nginx做下载服务器配置—X-Accel-Redirect.url  uploadFile.cpp  uploadFile.h  新建 Internet 快捷方式.url
crossany/base/: CMakeLists.txt
prj/android/TntPlayer/: hotva5  hotva51
prj/android/TntPlayer/app/: CMakeLists.txt  build.gradle
prj/android/TntPlayer/app/release/: output.json
prj/android/TntPlayer/app/src/androidTest/java/com/gwgz/tntplayer/: ExampleInstrumentedTest.java
prj/android/TntPlayer/app/src/main/: AndroidManifest.xml
prj/android/TntPlayer/app/src/main/assets/www/: error.html  index.html  login.html  playcontroler.html
prj/android/TntPlayer/app/src/main/assets/www/css/: my-app.css
prj/android/TntPlayer/app/src/main/assets/www/js/: my-app.js  pageInit.js  playcontrol.js
prj/android/TntPlayer/app/src/main/cpp/: AudioEngine.h  RenderOpenGles20.cpp  RenderOpenGles20.h  basesocket.cpp  basesocket.h  crossanyapp.cpp  crossanyapp.h  gl_code.cpp  gl_code2.cpp  gl_code2.h  gtmvreader.cpp  gtmvreader.h  httpclient.cpp  httpclient.h  httpsdownloader.cpp  httpsdownloader.h  native-lib.cpp  native-lib.h  protocol.h  speex_jni.cpp  speex_jni.h
prj/android/TntPlayer/app/src/main/cpp/android/: AudioEngine_android.cpp  AudioEngine_android.h  CMakeLists.txt
prj/android/TntPlayer/app/src/main/cpp/include/speex/: speex.h  speex_types.h
prj/android/TntPlayer/app/src/main/cpp/libspeex/: bits.c  buffer.c  jitter.c  mdf.c  os_support.h  preprocess.c  resample.c  scal.c  speex_callbacks.c  speex_header.c  stereo.c
prj/android/TntPlayer/app/src/main/java/com/gwgz/tntplayer/: DownloadItem.java  Filesys.java  GL2JNILib.java  GL2JNIView.java  GLJNIView.java  GwgzVideoView.java  HttpDownloader.java  MainActy.java  MySurfaceView.java  PlayActy.java  PlayControler.java  ViEAndroidGLES20.java  ViERenderer.java
prj/android/TntPlayer/app/src/main/res/layout/: acty_main.xml  acty_play.xml  sample_my_surface_view.xml  sample_play_controler.xml  sample_vi_eandroid_gles20.xml
prj/android/TntPlayer/app/src/main/res/values/: attrs_play_controler.xml  attrs_vi_eandroid_gles20.xml  strings.xml  styles.xml
prj/android/TntPlayer/app/src/test/java/com/gwgz/tntplayer/: ExampleUnitTest.java
prj/android/TntPlayer/gradle/wrapper/: gradle-wrapper.properties
prj/ios/tntPlayer/tntPlayer/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
prj/ios/tntPlayer/tntPlayer.xcodeproj/: project.pbxproj
prj/ios/tntPlayer/tntPlayer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
prj/ios/tntPlayer/tntPlayer.xcodeproj/project.xcworkspace/xcuserdata/zcl.xcuserdatad/: UserInterfaceState.xcuserstate
prj/ios/tntPlayer/tntPlayer.xcodeproj/xcuserdata/zcl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
prj/ios/tntPlayer/tntPlayer.xcodeproj/xcuserdata/zcl.xcuserdatad/xcschemes/: xcschememanagement.plist
prj/ios/tntPlayer/tntPlayer/Base.lproj/: Main.storyboard
prj/ios/tntPlayer/tntPlayer/tntPlayer.xcdatamodeld/: .xccurrentversion
prj/ios/tntPlayer/tntPlayerTests/: tntPlayerTests.m
prj/ios/tntPlayer/tntPlayerUITests/: tntPlayerUITests.m
